--- a/_posts/2014-03-03-Node.js-note-01.md
+++ b/_posts/2014-03-03-Node.js-note-01.md
@@ -8,7 +8,7 @@ tags: [Node.js]
  
 最近想研究一门服务器语言，我选择了比较熟悉的JS框架，Node.js。
 
-学习书籍，
+学习书籍，Node.js入门经典 （人民邮电出版社）
 
 ###配置开发环境 
 在[这里](http://nodejs.org/)下载相关文件安装即可。
@@ -26,14 +26,14 @@ tags: [Node.js]
 
 ###HelloWorld
 
-	var http = require('http');
+	var http = require('http');  
 	http.createServer(function (req, res) {
-	res.writeHead(200, {'Content - Type':'text/plain'});
-	res.end('Hello World\n');
+	res.writeHead(200, {'Content - Type':'text/plain'});  
+	res.end('Hello World\n');  
 
-	}).listen(3000, "127.0.0.1");
+	}).listen(3000, "127.0.0.1");  
 
-	console.log("Server running at http://127.0.0.1:3000/n");
+	console.log("Server running at http://127.0.0.1:3000/n");  
 	
 在浏览器地址栏里键入[http://127.0.0.1:3000/](http://127.0.0.1:3000/)，如果能正确显示Hello world，就说明我们第一个Node.js程序已经运行成功了。
 	
