--- a/_posts/2014-07-28-Bug-By-IB.markdown
+++ b/_posts/2014-07-28-Bug-By-IB.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "谁动了我的contentInset"
 date:   2014-07-28 18:00:00
 categories: 工匠梦
-tags: [Jekyll]
+tags: [iOS]
 ---
 
 今天有同事碰到一个问题，解决不了，来找我。
