--- a/_posts/2014-09-10-FMDB用例翻译.markdown
+++ b/_posts/2014-09-10-FMDB用例翻译.markdown
@@ -2,7 +2,7 @@
 layout: post  
 title:  "FMDB用例分析"  
 date:   2014-09-10 18:00:00  
-categories: 工匠梦  
+categories: CodeArtisan  
 tags: [iOS]  
 ---
 
