--- a/_posts/2014-03-03-Node.js-note-01.md
+++ b/_posts/2014-03-03-Node.js-note-01.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Node.js 学习笔记01--Hello world"
 description: ""
-categories: 工匠梦
+categories: CodeArtisan
 tags: [Node.js]
 ---
  
