--- a/_posts/2015-05-06-使用Python来检索项目中的汉字.markdown
+++ b/_posts/2015-05-06-使用Python来检索项目中的汉字.markdown
@@ -2,7 +2,7 @@
 layout: post  
 title:  "使用Python来检索iOS项目中的汉字"  
 date:   2015-05-06 21:05:15  
-categories: 工匠梦  
+categories: CodeArtisan  
 tags: [iOS, Python]  
 ---
 
