--- a/_posts/2015-05-06-最近遇到问题总结.markdown
+++ b/_posts/2015-05-06-最近遇到问题总结.markdown
@@ -2,6 +2,7 @@
 layout: post  
 title:  "最近遇到问题总结"  
 date:   2015-05-06 22:01:03  
+comments: ture
 categories: CodeArtisan  
 tags: [iOS, Tips]  
 ---
