--- a/_posts/2014-06-05-Node.js-note-03.markdown
+++ b/_posts/2014-06-05-Node.js-note-03.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Node.js 学习笔记03－使用Express"
 date:   2014-06-05 21:26:50
-categories: CodeArtisan
+categories: log
 tags: [Node.js]
 ---
 
