--- a/_posts/2014-07-28-Bug-By-IB.markdown
+++ b/_posts/2014-07-28-Bug-By-IB.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "谁动了我的contentInset"
 date:   2014-07-28 18:00:00
-categories: CodeArtisan
+categories: Tips
 tags: [iOS]
 ---
 
