--- a/_posts/2014-09-01-LLDB-note.markdown
+++ b/_posts/2014-09-01-LLDB-note.markdown
@@ -2,7 +2,7 @@
 layout: post  
 title:  "LLDB笔记"  
 date:   2014-09-04 18:00:00  
-categories: CodeArtisan  
+categories: Notes  
 tags: [iOS]  
 ---
 
